fixed alignment issue for show link on pets index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: #7CE2FF;
     font-family: 'Roboto', sans-serif;
+    line-height: 20px;
+    font-size: 16px;
 }
 
 nav ul {
@@ -63,6 +65,10 @@ section h1 {
     flex-direction: column;
     align-items: flex-end;
     list-style-type: none;
+}
+
+.empty-line{
+    height: 1.25rem;
 }
 
 form label {
